[package]
name = "backup-dog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.10"
notify-debouncer-full = "0.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
winapi = "0.3.9"
windows-service = "0.5.0"

[[bin]]
name = "backup-dog"
path = "main.rs"
